# Python-CA-Seedwork

./: .gitignore
examples/rest-api/: config.py  main_fastapi.py  pyproject.toml
examples/rest-api/api/v1/: fastapi_app.py
examples/rest-api/api/v1/dependencies/: use_cases.py
examples/rest-api/api/v1/modules/user/: routers.py
examples/rest-api/domain/user/: entities.py  errors.py  repositories.py  usecases.py
examples/rest-api/infrastructure/sqlalchemy_postgresql/: database.py
examples/rest-api/infrastructure/sqlalchemy_postgresql/user/: models.py  repositories.py
modules/sqlalchemy-postgresql/: pyproject.toml
modules/sqlalchemy-postgresql/ca_seedwork_sqlalchemy_postgresql/: data_mappers.py  models.py  repositories.py
